# MyBibleModuleParser

./: README.md  main.py  setup.cfg
mybible/: __init__.py  core.py  utils.py
