[metadata]
name = mybible
version = 0.0.1
author = Eoan Ermine
author_email = patriotrossii2019@mail.ru
description = API for MyBible modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PatriotRossii/MyBibleModuleParser
project_urls =
    Bug Tracker = https://github.com/PatriotRossii/MyBibleModuleParser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mybible
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mybible
